Fixed bugs on mobile, added box shadows

--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -41,8 +41,17 @@
 @media(max-width: 520px) {
 
     #main-nav{
-        display: none;
+        flex-direction: column;
+        align-items: center;
     }
+
+    .logo-box {
+        background: none;
+    }
+
+
+
+
     #header-home {
        // height: 20rem;
        //margin: 0;
@@ -72,5 +81,21 @@
                 }
             }
         }
+    }
+
+    //Contact
+    #contact {
+        .text-fields {
+            grid-template-areas: 
+                'name'
+                'email'
+                'subject'
+                'phone'
+                'message';
+        }
+    }
+
+    .bottom-line {
+        width: 20rem;
     }
 }
