--- a/scss/main.scss
+++ b/scss/main.scss
@@ -49,6 +49,7 @@ img {
     position: sticky;
     top: 0;
     justify-content: space-between;
+    
    
 
     ul {
@@ -65,6 +66,8 @@ img {
         &:hover {
             background: $main-text-color;
             border-radius: 5px;
+            -webkit-box-shadow: 0px 10px 13px -7px #131313, 1px 5px 15px 5px rgba(250, 250, 250, 0); 
+            box-shadow: 0px 10px 13px -7px #131313, 1px 5px 15px 5px rgba(250, 250, 250, 0);
         }
     }
 }
@@ -168,7 +171,7 @@ img {
 
     .envelope {
     //display: flex;
-    //text-align: center;
+    text-align: left;
     //justify-content: space-between;
 
         i {
@@ -216,9 +219,8 @@ img {
     }
 
     button[type='submit'] {
-        width: 30%;
-        display: inline-block;
-        text-align: center;
+        width: 50%;
+        //text-align: center;
     } 
 }
 
